--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
         android:layout_marginBottom="18dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:text="1234"
         app:layout_constraintBottom_toTopOf="@+id/tv_main_error"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/et_main_username" />
@@ -57,7 +58,7 @@
         android:layout_marginBottom="48dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Name"
+        android:text="jperez4"
         app:layout_constraintBottom_toTopOf="@+id/et_main_password"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
