--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -10,25 +10,35 @@
     <Button
         android:id="@+id/btn_mm_pastsessions"
         android:layout_width="185dp"
-        android:layout_height="62dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="399dp"
         android:text="View My Sessions"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="270dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_mm_progress" />
 
     <Button
         android:id="@+id/btn_mm_progress"
         android:layout_width="185dp"
-        android:layout_height="62dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="19dp"
         android:text="View My Progress"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="189dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_mm_pastsessions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_mm_newsession" />
 
     <Button
         android:id="@+id/btn_mm_newsession"
         android:layout_width="185dp"
-        android:layout_height="62dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="27dp"
         android:text="Start New Session"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="101dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_mm_progress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
