--- a/app/src/main/res/layout/activity_my_progress.xml
+++ b/app/src/main/res/layout/activity_my_progress.xml
@@ -15,15 +15,15 @@
         android:fontFamily="@font/audiowide"
         android:text="Muscle Group"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintBottom_toTopOf="@+id/sp_mp_exercise"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView6" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/sp_mp_MuscleGroup"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/spinner"
+        app:layout_constraintBottom_toBottomOf="@+id/sp_mp_exercise"
         app:layout_constraintEnd_toEndOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lv_mp_userLifts" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/sp_mp_exercise"
         android:layout_width="0dp"
         android:layout_height="18dp"
         android:layout_marginTop="110dp"
@@ -93,7 +93,7 @@
         android:fontFamily="@font/audiowide"
         android:text="Exercise"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintBottom_toTopOf="@+id/sp_mp_exercise"
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
