--- a/app/src/main/res/layout/activity_new_session.xml
+++ b/app/src/main/res/layout/activity_new_session.xml
@@ -11,28 +11,27 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/audiowide"
         android:text="New Session"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/lv_ns_liftstoadd"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/lv_ns_liftstoadd"
         android:layout_width="398dp"
-        android:layout_height="413dp"
+        android:layout_height="0dp"
         android:layout_marginStart="3dp"
+        android:layout_marginTop="120dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginBottom="213dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="134dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_ns_addNewLifttypes"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_ns_addsession"
@@ -49,8 +48,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
-        android:text="Go Back"
+        android:text="     Back       "
         app:layout_constraintBottom_toBottomOf="@+id/btn_ns_addsession"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_ns_addsession" />
+
+    <EditText
+        android:id="@+id/et_ns_sessionName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginBottom="3dp"
+        android:ems="10"
+        android:hint="Session Name"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/lv_ns_liftstoadd"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_ns_addNewLifttypes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="16dp"
+        android:text="Add New Lift Types"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_ns_goback"
+        app:layout_constraintTop_toBottomOf="@+id/lv_ns_liftstoadd" />
 </androidx.constraintlayout.widget.ConstraintLayout>
