--- a/app/src/main/res/layout/activity_my_progress.xml
+++ b/app/src/main/res/layout/activity_my_progress.xml
@@ -5,28 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyProgress">
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:fontFamily="@font/audiowide"
-        android:text="Muscle Group"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/sp_mp_exercise"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView6" />
-
-    <Spinner
-        android:id="@+id/sp_mp_MuscleGroup"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/sp_mp_exercise"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+    tools:context=".AllSessions">
 
     <TextView
         android:id="@+id/textView5"
@@ -45,8 +24,8 @@
 
     <ListView
         android:id="@+id/lv_mp_userLifts"
-        android:layout_width="399dp"
-        android:layout_height="441dp"
+        android:layout_width="410dp"
+        android:layout_height="446dp"
         android:layout_marginStart="2dp"
         android:layout_marginEnd="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,25 +54,5 @@
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lv_mp_userLifts" />
-
-    <Spinner
-        android:id="@+id/sp_mp_exercise"
-        android:layout_width="0dp"
-        android:layout_height="18dp"
-        android:layout_marginTop="110dp"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="62dp"
-        android:fontFamily="@font/audiowide"
-        android:text="Exercise"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/sp_mp_exercise"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
