--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -8,22 +8,33 @@
     tools:context=".MainMenu">
 
     <Button
-        android:id="@+id/btn_mm_pastsessions"
+        android:id="@+id/btn_mm_addlifts"
         android:layout_width="185dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="399dp"
-        android:text="View My Sessions"
+        android:layout_marginBottom="310dp"
+        android:text="Add to Database"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_mm_progress" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_mm_pastsessions" />
 
     <Button
-        android:id="@+id/btn_mm_progress"
+        android:id="@+id/btn_mm_pastsessions"
         android:layout_width="185dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="19dp"
-        android:text="View My Progress"
+        android:layout_marginBottom="25dp"
+        android:text="Progress"
+        app:layout_constraintBottom_toTopOf="@+id/btn_mm_addlifts"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_mm_allsessions" />
+
+    <Button
+        android:id="@+id/btn_mm_allsessions"
+        android:layout_width="185dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="21dp"
+        android:text="View All Sessions"
         app:layout_constraintBottom_toTopOf="@+id/btn_mm_pastsessions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +47,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginBottom="27dp"
         android:text="Start New Session"
-        app:layout_constraintBottom_toTopOf="@+id/btn_mm_progress"
+        app:layout_constraintBottom_toTopOf="@+id/btn_mm_allsessions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
