--- a/app/src/main/res/layout/activity_new_session.xml
+++ b/app/src/main/res/layout/activity_new_session.xml
@@ -53,20 +53,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_ns_addsession" />
 
-    <EditText
-        android:id="@+id/et_ns_sessionName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginBottom="3dp"
-        android:ems="10"
-        android:hint="Session Name"
-        android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/lv_ns_liftstoadd"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/btn_ns_addNewLifttypes"
         android:layout_width="wrap_content"
@@ -77,4 +63,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_ns_goback"
         app:layout_constraintTop_toBottomOf="@+id/lv_ns_liftstoadd" />
+
+    <Spinner
+        android:id="@+id/sp_ns_sessionName"
+        android:layout_width="202dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/lv_ns_liftstoadd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
