--- a/app/src/main/res/layout/activity_view_session.xml
+++ b/app/src/main/res/layout/activity_view_session.xml
@@ -24,14 +24,13 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="311dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="@font/audiowide"
         android:text="Volume by Lift"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/lv_vs_volumeByLiftList"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lv_vs_lifts" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_vs_date"
