--- a/app/src/main/res/layout/activity_compare_to_other_users.xml
+++ b/app/src/main/res/layout/activity_compare_to_other_users.xml
@@ -5,41 +5,31 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllSessions">
+    tools:context=".CompareToOtherUsers">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="116dp"
         android:fontFamily="@font/audiowide"
-        android:text="My Sessions"
+        android:text="Other Users"
+        android:textColor="#D0BCFF"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/lv_mp_userLifts"
+        app:layout_constraintBottom_toTopOf="@+id/lv_ctou_users"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/lv_mp_userLifts"
+        android:id="@+id/lv_ctou_users"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="13dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_as_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <Button
-        android:id="@+id/btn_as_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:text="Back"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="182dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lv_mp_userLifts" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 </androidx.constraintlayout.widget.ConstraintLayout>
