--- a/app/src/main/res/layout/activity_progress_menu.xml
+++ b/app/src/main/res/layout/activity_progress_menu.xml
@@ -11,13 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="Compare Sessions"
+        android:text="Compare my Sessions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_pm_progressGraph"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="37dp"
@@ -27,12 +27,12 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_pm_CompareSession" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_pm_otherUsers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="Compare to Other Users"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_pm_progressGraph" />
 </androidx.constraintlayout.widget.ConstraintLayout>
