--- a/app/src/main/res/layout/activity_view_session.xml
+++ b/app/src/main/res/layout/activity_view_session.xml
@@ -15,32 +15,17 @@
         android:fontFamily="@font/audiowide"
         android:text="Session Name"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_vs_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:fontFamily="@font/audiowide"
-        android:text="Volume by Lift"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/lv_vs_volumeByLiftList"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
         android:id="@+id/tv_vs_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
         android:fontFamily="@font/audiowide"
         android:text="Session Date"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/lv_vs_lifts"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -50,25 +35,24 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        android:layout_marginBottom="21dp"
+        app:layout_constraintBottom_toTopOf="@+id/lv_vs_volumeByLiftList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_vs_date" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_vs_viewLifts" />
 
     <ListView
         android:id="@+id/lv_vs_volumeByLiftList"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="197dp"
         android:layout_marginStart="3dp"
-        android:layout_marginTop="421dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginBottom="62dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_vs_back"
+        android:layout_marginBottom="158dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_vs_back"
@@ -78,6 +62,25 @@
         android:text="Go Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_vs_viewLifts"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="View Lifts"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lv_vs_volumeByLiftList" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_vs_date" />
+
+    <Button
+        android:id="@+id/btn_vs_viewVolumes"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="8dp"
+        android:text="Volume per Lift"
+        app:layout_constraintBottom_toTopOf="@+id/lv_vs_lifts"
+        app:layout_constraintEnd_toEndOf="@+id/lv_vs_lifts" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
