--- a/app/src/main/res/layout/add_lift_custom_cell.xml
+++ b/app/src/main/res/layout/add_lift_custom_cell.xml
@@ -3,83 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/tv_alcc_addnewlift"
-        android:layout_width="18dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:text="+"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_alcc_removethislift"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/sp_alcc_liftTypes"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginBottom="6dp"
-        android:text="Lift Type"
-        app:layout_constraintBottom_toTopOf="@+id/sp_alcc_liftTypes"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_alcc_addrep"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_alcc_subtractrep"
-        app:layout_constraintEnd_toStartOf="@+id/tv_alcc_subtractrep"
-        app:layout_constraintStart_toEndOf="@+id/et_alcc_reps" />
+    android:layout_height="match_parent"
+    android:background="#424141"
+    android:backgroundTint="#3B3A40">
 
     <Spinner
         android:id="@+id/sp_alcc_liftTypes"
         android:layout_width="145dp"
         android:layout_height="45dp"
+        android:outlineProvider="paddedBounds"
         app:layout_constraintBottom_toBottomOf="@+id/et_alcc_reps"
         app:layout_constraintEnd_toEndOf="@+id/textView11"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toTopOf="@+id/et_alcc_reps" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
-        android:text="Reps"
-        app:layout_constraintBottom_toTopOf="@+id/sp_alcc_liftTypes"
-        app:layout_constraintStart_toEndOf="@+id/sp_alcc_liftTypes" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="94dp"
-        android:text="Weight"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/et_alcc_reps"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_alcc_subtractrep"
-        android:layout_width="18dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginEnd="63dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/et_alcc_weight"
-        app:layout_constraintEnd_toEndOf="@+id/et_alcc_weight"
-        app:layout_constraintStart_toStartOf="@+id/et_alcc_reps"
-        app:layout_constraintTop_toTopOf="@+id/et_alcc_weight" />
+        app:layout_constraintTop_toTopOf="@+id/et_alcc_reps"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/et_alcc_weight"
@@ -87,34 +25,130 @@
         android:layout_height="45dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
+        android:backgroundTint="#D0BCFF"
         android:ems="10"
         android:inputType="number"
+        android:outlineProvider="paddedBounds"
+        android:textColor="#D0BCFF"
+        android:textColorHighlight="#F60808"
+        android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="@+id/textView13"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+    <TextView
+        android:id="@+id/tv_alcc_addnewlift"
+        android:layout_width="18dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:outlineProvider="paddedBounds"
+        android:text="+"
+        android:textAlignment="center"
+        android:textColor="#D0BCFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_alcc_removethislift"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/sp_alcc_liftTypes"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/tv_alcc_subtractrep"
+        android:layout_width="18dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginEnd="63dp"
+        android:outlineProvider="paddedBounds"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/et_alcc_weight"
+        app:layout_constraintEnd_toEndOf="@+id/et_alcc_weight"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="@+id/et_alcc_reps"
+        app:layout_constraintTop_toTopOf="@+id/et_alcc_weight"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/et_alcc_reps"
         android:layout_width="63dp"
         android:layout_height="45dp"
+        android:backgroundTint="#D0BCFF"
         android:ems="10"
         android:inputType="number"
+        android:outlineProvider="paddedBounds"
+        android:textColor="#D0BCFF"
+        android:textColorHighlight="#F60808"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/tv_alcc_addrep"
         app:layout_constraintEnd_toEndOf="@+id/textView12"
+        app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toTopOf="@+id/tv_alcc_addrep" />
+        app:layout_constraintTop_toTopOf="@+id/tv_alcc_addrep"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/tv_alcc_addrep"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:outlineProvider="paddedBounds"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_alcc_subtractrep"
+        app:layout_constraintEnd_toStartOf="@+id/tv_alcc_subtractrep"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/et_alcc_reps" />
 
     <TextView
         android:id="@+id/tv_alcc_removethislift"
         android:layout_width="18dp"
         android:layout_height="0dp"
         android:layout_marginTop="6dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="4dp"
+        android:outlineProvider="paddedBounds"
         android:text="-"
         android:textAlignment="center"
+        android:textColor="#D0BCFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/et_alcc_weight"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:layout_constraintTop_toBottomOf="@+id/textView13"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:layout_marginBottom="4dp"
+        android:text="Lift Type"
+        android:textColor="#D0BCFF"
+        android:textColorLink="#D0BCFF"
+        app:layout_constraintBottom_toTopOf="@+id/sp_alcc_liftTypes"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="99dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="94dp"
+        android:text="Weight"
+        android:textColor="#D0BCFF"
+        android:textColorLink="#D0BCFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.409"
+        app:layout_constraintStart_toStartOf="@+id/et_alcc_reps"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="Reps"
+        android:textColor="#D0BCFF"
+        android:textColorLink="#D0BCFF"
+        app:layout_constraintBottom_toTopOf="@+id/sp_alcc_liftTypes"
+        app:layout_constraintStart_toEndOf="@+id/sp_alcc_liftTypes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
