--- a/app/src/main/res/layout/userlist_cc.xml
+++ b/app/src/main/res/layout/userlist_cc.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Best Lift"
+        android:textAlignment="viewEnd"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textView24"
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
