--- a/app/src/main/res/layout/volume_by_lift_custom_cell.xml
+++ b/app/src/main/res/layout/volume_by_lift_custom_cell.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#424141"
+    android:backgroundTint="#3B3A40">
 
     <TextView
         android:id="@+id/tv_vblcc_volume"
@@ -13,6 +15,7 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/audiowide"
         android:text="LiftName"
+        android:textColor="#D0BCFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,6 +28,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/audiowide"
         android:text="LiftName"
+        android:textColor="#D0BCFF"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
